force-app/main/default/objects/RE_MY_Unit_Breakup__c/RE_MY_Unit_Breakup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE MY Unit Breakup</label>
</CustomObject>