force-app/main/default/objects/RE_MY_Unit_Breakup__c/fields/RE_Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Volume_Unit__c</fullName>
    <label>RE_Volume_Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>